fix(bazar) : aceditor toolbar not showing dropdown

--- a/tools/bazar/presentation/styles/bazar.css
+++ b/tools/bazar/presentation/styles/bazar.css
@@ -303,7 +303,17 @@ input[type="date"]::-webkit-input-placeholder{
   visibility: hidden !important;
 }
 
-/* submit button disbled */
+/* aceditor field */
+.form-group.wiki-textarea .btn-toolbar {
+  margin-left: 1em;
+  margin-right: 1em;
+}
+.form-group.wiki-textarea .control-label {
+  top: 0.6em !important;
+  margin-top: -0.5em !important;
+}
+
+/* submit button disabled */
 #formulaire .form-actions button[type=submit].submit-disabled {
   cursor: progress;
 }
